welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:24: error: illegal start of simple expression
}
^Poucet:27: error: 'while' expected but '}' found.
	}
        ^